# gazetteer-entity-parser

./: CHANGELOG.md  Cargo.toml  README.rst  update_version.sh
benches/: bench_parser.rs
examples/: entity_parsing_from_scratch.rs  interactive_parsing_cli.rs
src/: constants.rs  data.rs  errors.rs  lib.rs  macros.rs  parser.rs  parser_builder.rs  symbol_table.rs  utils.rs
