[profile.bench]
debug = true

[dependencies]
failure = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1"
fnv = "1.0"

[dev-dependencies]
criterion = "0.2"
dinghy-test = "0.4"
rand = "0.7"
tempfile = "3"
clap = "2"

[[bench]]
name = "bench_parser"
harness = false

[[example]]
name = "interactive_parsing_cli"

[[example]]
name = "entity_parsing_from_scratch"
